--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,8 @@
     <meta name="theme-color" content="#03A9F4">
 
 	<title>NYT-Googlebooks</title>
-
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
+	<link rel="manifest" href="manifest.json">
 </head>
 <body>
 	<main id="reactTarget">
@@ -36,6 +37,26 @@
 	</main>
 
 	<script src="assets/bundle.js"></script>
-
+    <!-- http://schema.org/ -->
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "WebApplication",
+        "accessibilityAPI": "ARIA",
+        "accessibilityControl": [
+            "fullKeyboardControl",
+            "fullMouseControl"
+        ],
+        "applicationCategory": "Resource",
+        "offers": {
+            "price": "0"
+        },
+        "featureList": "Search, Save Favorites, Buy" ,
+        "ReleaseNotes": "Initial Release",
+        "screenshot": null,
+        "about": "React app that allows users to search and save and buy books",
+        "author": "Jeremy King"
+    }
+    </script>
 </body>
 </html>
